# cleanrl

./: .gitignore  .pre-commit-config.yaml  DQN.ipynb  Demo.ipynb  README.md  alpha.py  alphazero-test.py  alphazero.py  alphazero_rnn.py  batched.py  config.py  dqn-equinox.py  hello.py  launch.sh  log_util.py  muzero.py  old-equinox-dqn.py  ppo.py  prioritized_buffer.py  pyproject.toml  rnn.py  wrappers.py
cleanrl/: alphazero_rnn.py  bc_jax.py  bc_tabular.py  c51.py  c51_atari.py  c51_atari_jax.py  c51_jax.py  dagger_tabular.py  ddpg_continuous_action.py  ddpg_continuous_action_jax.py  dqn.py  dqn_atari.py  dqn_atari_jax.py  dqn_jax.py  gail_tabular.py  iq_learn_dual_tabular.py  iq_learn_jax.py  iq_learn_tabular.py  muzero.py  npg_tabular.py  pg_tabular.py  ppg_procgen.py  ppo.py  ppo_atari.py  ppo_atari_envpool.py  ppo_atari_envpool_xla_jax.py  ppo_atari_envpool_xla_jax_scan.py  ppo_atari_lstm.py  ppo_atari_multigpu.py  ppo_continuous_action.py  ppo_jax.py  ppo_pettingzoo_ma_atari.py  ppo_procgen.py  ppo_rnd_envpool.py  pqn.py  pqn_atari_envpool.py  pqn_atari_envpool_lstm.py  qdagger_dqn_atari_impalacnn.py  qdagger_dqn_atari_jax_impalacnn.py  rainbow_atari.py  (+7 more)
cleanrl/ppo_continuous_action_isaacgym/: ppo_continuous_action_isaacgym.py
cleanrl/ppo_trxl/: ppo_trxl.py
cleanrl_utils/: buffers.py  config.py  jax_utils.py  log_utils.py  prioritized_buffer.py  resume.py  specs.py  structures.py  visualize.py
cleanrl_utils/envs/: base.py  env_dummy.py  env_multi_catch.py  grid_env.py  housemaze_env.py  metrics.py  multi_catch.py  pytree_env.py  translate.py  utils.py  wrap_auto_reset.py  wrap_flatten_observation.py  wrap_goal.py  wrap_oar.py
cleanrl_utils/wrappers/: flatten_observation.py  goal_wrapper.py  metrics.py  oar_wrapper.py
conf/: catch.yaml  catch_sweep.yaml  config.yaml  debug.yaml  housemaze.yaml  multi_catch.yaml
docs/get-started/: CleanRL_Huggingface_Integration_Demo.ipynb
src/configs/: catch.yaml  catch_sweep.yaml  debug.yaml  dummy.yaml  dummy_sweep.yaml  housemaze.yaml
src/envs/: base.py  dummy_env.py  housemaze.py  housemaze_env.py  multi_catch.py  pytree_env.py  translate.py
src/experiments/: Demo.ipynb  alphazero_rnn.py  config.py  muzero.py  ppo.py
src/ilx/: bc.py  dagger.py  gail.py  iq_learn.py  iq_learn_dual.py  maps.py  mdp.py  npg.py  pg.py  value_dice.py  value_dice_buffer.py
src/ilx/core/: maps.py  mdp.py
src/testing/: dummy_env.py  pytree_env.py
src/utils/: auto_reset.py  base.py  flatten_observation.py  goal_wrapper.py  housemaze.py  jax_utils.py  log.py  log_util.py  log_utils.py  multi_catch.py  prioritized_buffer.py  rl_utils.py  structures.py  translate.py  visualize.py
src/wrappers/: auto_reset.py  base.py  flatten_observation.py  goal_wrapper.py  metrics.py  oar_wrapper.py
tests/: conftest.py  test_bc.py  test_dagger.py  test_envs.py  test_grid_env.py  test_mdp.py  test_muzero.py  test_prioritized_buffer.py  test_rl_utils.py
tests/envs/: test_dummy_env.py
tests/experiments/: test_muzero.py  test_muzero_dummy.yaml
tests/utils/: conftest.py  test_auto_reset.py  test_flatten_observation.py  test_goal_wrapper.py  test_prioritized_buffer.py  test_rl_utils.py
tests/wrappers/: test_auto_reset.py  test_flatten_observation.py  test_goal_wrapper.py  test_metrics.py
wrappers/: auto_reset.py  base.py  common.py  env.py  flatten_observation.py  goal.py  goal_wrapper.py  gymnax_wrapper.py  housemaze.ipynb  log.py  make_env.py  multi_catch.py  translate.py
