[project]
name = "ilx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Cai", email = "alexandercai@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "distrax>=0.1.7",
    "equinox>=0.13.1",
    "matplotlib>=3.10.6",
    "optax>=0.2.6",
]

[project.scripts]
ilx = "ilx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["F722"]
