[project]
name = "cleanrl"
version = "2.0.0b1"
description = "High-quality single file implementation of Deep Reinforcement Learning algorithms with research-friendly features"
authors = [{ name = "Costa Huang", email = "costa.huang@outlook.com" }]
requires-python = ">=3.9,<3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "reinforcement learning",
    "machine learning",
    "research",
]
dependencies = [
    "tensorboard",
    "wandb",
    "gym",
    "gymnasium",
    "torch",
    "moviepy",
    "pygame",
    "huggingface-hub",
    "tenacity",
    "tyro",
]

[project.optional-dependencies]
atari = [
    "ale-py",
    "AutoROM[accept-rom-license]",
    "opencv-python",
    "shimmy",
]
envpool = ["envpool", "opencv-python",]
procgen = ["procgen; platform_machine != 'arm64'"]
control = [
    "mujoco",
    "mujoco-mjx",
    "brax",
    "playground",
    "imageio",
    "shimmy",
    "dm-control",
    "h5py",
    "glfw>=2.10.0",
]
pettingzoo = [
    "PettingZoo",
    "SuperSuit",
    "multi-agent-ale-py",
]
jax = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "chex",
    "scipy",
    "jaxtyping",
    "distrax",
    "beartype",
    "equinox",
    "mctx",
    "rlax",
    "jax-metal; sys_platform == 'darwin'",
]
imitation = [
    "minari",
    "h5py",
]
optuna = [
    "optuna",
    "optuna-dashboard",
    "typing_extensions",
]
docs = [
    "mkdocs-material",
    "markdown-include",
    "openrlbenchmark",
]
cloud = [
    "boto3",
    "awscli",
]
plot = [
    "matplotlib",
    "mediapy",
]

[dependency-groups]
dev = ["pre-commit", "pytest"]

[tool.hatch.build.targets.sdist]
include = [
    "cleanrl",
    "cleanrl_utils",
]

[tool.hatch.build.targets.wheel]
include = [
    "cleanrl",
    "cleanrl_utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["I"]
